--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="assetsApp">
+  <body ng-app="grassroot">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -33,7 +33,7 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <script src="scripts/vendor/cordova-2.3.0.js"></script>
+    <script src="scripts/vendor/cordova.js"></script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
@@ -44,13 +44,18 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/services/api_service.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/services/cordovaready.js"></script>
+        <script src="scripts/services/geolocation.js"></script>
+        <script src="scripts/controllers/location.js"></script>
         <!-- endbuild -->
 </body>
-Allo
 </html>
