Added view for events.

--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -56,6 +56,8 @@
         <script src="scripts/services/cordovaready.js"></script>
         <script src="scripts/services/geolocation.js"></script>
         <script src="scripts/controllers/location.js"></script>
+        <script src="scripts/controllers/events.js"></script>
+        <script src="scripts/controllers/event.js"></script>
         <!-- endbuild -->
 </body>
 </html>
