--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -15,7 +15,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="styles/events.css">
     <!-- endbuild -->
   </head>
   <body ng-app="grassroot">
