--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -35,6 +35,7 @@
     <![endif]-->
 
     <script src="scripts/vendor/cordova.js"></script>
+    <script src="scripts/vendor/cordova_plugins.js"></script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
