--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -35,7 +35,9 @@
     <![endif]-->
 
     <script src="scripts/vendor/cordova.js"></script>
-    <script src="scripts/vendor/cordova_plugins.js"></script>
+    <script src="scripts/index.js"></script>
+   <!-- <script src="scripts/vendor/cordova_plugins.js"></script>
+    <script src="scripts/plugins/PushNotification.js"></script>-->
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
@@ -54,9 +56,9 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/services/api_service.js"></script>
-        <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/cordovaready.js"></script>
         <script src="scripts/services/geolocation.js"></script>
+        <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/location.js"></script>
         <script src="scripts/controllers/events.js"></script>
         <script src="scripts/controllers/event.js"></script>
