Added view for newsletter, petition, and take_action.

--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -58,10 +58,16 @@
         <script src="scripts/services/api_service.js"></script>
         <script src="scripts/services/cordovaready.js"></script>
         <script src="scripts/services/geolocation.js"></script>
+
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/location.js"></script>
         <script src="scripts/controllers/events.js"></script>
         <script src="scripts/controllers/event.js"></script>
+        <script src="scripts/controllers/tack_action.js"></script>
+        <script src="scripts/controllers/petition.js"></script>
+        <script src="scripts/controllers/petitions.js"></script>
+        <script src="scripts/controllers/sign_petition.js"></script>
+        <script src="scripts/controllers/newsletter.js"></script>
         <!-- endbuild -->
 </body>
 </html>
