--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -1,8 +1,4 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -15,28 +11,16 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/events.css">
     <!-- endbuild -->
   </head>
   <body ng-app="grassroot">
-    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
 
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
 
-
-
-    <!--[if lt IE 9]>
-    <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/json3/lib/json3.min.js"></script>
-    <![endif]-->
-
     <script src="scripts/vendor/cordova.js"></script>
-   <!-- <script src="scripts/vendor/cordova_plugins.js"></script>
-    <script src="scripts/plugins/PushNotification.js"></script>-->
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
