--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -45,6 +45,8 @@
 
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/location.js"></script>
+        <script src="scripts/controllers/stories.js"></script>
+        <script src="scripts/controllers/story.js"></script>
         <script src="scripts/controllers/events.js"></script>
         <script src="scripts/controllers/event.js"></script>
         <script src="scripts/controllers/tack_action.js"></script>
