Fixed styling when opening from messages.

--- a/assets/app/special.html
+++ b/assets/app/special.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/events.css">
     <link rel="stylesheet" href="styles/messages.css">
     <link rel="stylesheet" href="styles/stories.css">
+    <link rel="stylesheet" href="styles/take_action.css">
     <!-- endbuild -->
   </head>
   <body ng-app="grassroot">
