Added action cards.

--- a/assets/app/index.html
+++ b/assets/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles/messages.css">
     <link rel="stylesheet" href="styles/stories.css">
     <link rel="stylesheet" href="styles/take_action.css">
+    <link rel="stylesheet" href="styles/cards.css">
     <!-- endbuild -->
   </head>
   <body ng-app="grassroot">
@@ -60,6 +61,7 @@
         <script src="scripts/controllers/newsletter.js"></script>
         <script src="scripts/controllers/message_center.js"></script>
         <script src="scripts/controllers/message.js"></script>
+        <script src="scripts/controllers/cards.js"></script>
         <!-- endbuild -->
 </body>
 </html>
